# Coffee-CLI-main

./: .gitattributes  .gitignore  .taurignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  TRADEMARKS.md  build-macos.sh  build.rs  start-dev.bat  start-dev.sh  start-tauri-dev.bat  tauri.conf.json  tauri.hot-dev.conf.json
Web-Home/: _worker.js  index.html  install.sh
Web-Home/CC-VibeID-test/: SKILL.md  matrix.json
Web-Home/CC-VibeID-test/scripts/: analyze.js  inject.js
Web-Home/courses/: claude-code.html  codex.html  openclaw.html  opencode.html
Web-Home/courses/claude-code/: 01-slash-commands.md  02-memory.md  03-skills.md  04-subagents.md  05-mcp.md  06-hooks.md  07-plugins.md  08-checkpoints.md  09-advanced-features.md  10-cli.md  build.js  modules.js
Web-Home/courses/claude-code/en/: 01-slash-commands.md  02-memory.md  03-skills.md  04-subagents.md  05-mcp.md  06-hooks.md  07-plugins.md  08-checkpoints.md  09-advanced-features.md  10-cli.md
Web-Home/css/: courses.css  style.css
Web-Home/js/: main.js
Web-Home/play/: game.json  prince-of-persia.jsdos
capabilities/: default.json
icons/: icon.icns
install/: install.ps1  install.sh  release-notes-template.md
scripts/: coffee-cli-hook.py  fetch-icon-themes.mjs  generate-icon-themes.mjs
src/: agent_mcp_config.rs  cli.rs  fs_watcher.rs  hook_installer.rs  hook_server.rs  main.rs  mcp_injector.rs  mcp_server.rs  multi_agent_profiles.rs  multi_agent_protocol.rs  server.rs  terminal.rs  tool_config.rs
src-ui/: eslint.config.js  index.html  package-lock.json  package.json  resize_icon.js  vite.config.ts
src-ui/.jsdos/: dosbox.conf
src-ui/public/: arcade.html
src-ui/public/icons/themes/: LICENSES.md
src-ui/src/: App.tsx  main.tsx  tauri.ts
src-ui/src/components/center/: ActiveGambit.tsx  CenterPanel.css  CenterPanel.tsx  ChatReader.css  ChatReader.tsx  ContributionHeatmap.css  ContributionHeatmap.tsx  CtfModePanel.tsx  DosPlayer.css  DosPlayer.tsx  FileEditorModal.css  FileEditorModal.tsx  FourSplitGrid.tsx  Gambit.css  Gambit.tsx  HyperAgentPanel.tsx  MultiAgentGrid.css  MultiAgentGrid.tsx  TierTerminal.css  TierTerminal.tsx  ToolConfigModal.tsx
src-ui/src/components/common/: ConfirmDialog.css  ConfirmDialog.tsx  ErrorBoundary.tsx  ScrollPanel.css  ScrollPanel.tsx  TitleBar.css  TitleBar.tsx
src-ui/src/i18n/: de.ts  en.ts  es.ts  fr.ts  ja.ts  ko.ts  pt.ts  ru.ts  useT.ts  vi.ts  zh-CN.ts  zh-TW.ts
src-ui/src/lib/: agent-status-bus.ts  clipboard.ts  explorer-drag.ts  file-drop.ts  focus-registry.ts  history-cache.ts  pane-focus.ts  pane-resume.ts  pty-event-bus.ts  tab-actions.ts
src-ui/src/store/: app-state.tsx
src-ui/src/styles/: global.css
src-ui/src/utils/: game-catalog.ts
(+8 files in other folders)
