[package]
name = "coffee-cli"
version = "2.1.3"
edition = "2021"
description = "Lightweight Multi-layer AI CLI Terminal"
license = "AGPL-3.0-or-later"
repository = "https://github.com/edison7009/Coffee-CLI"
keywords = ["ai", "prompt", "coding", "llm", "tree-sitter"]
categories = ["command-line-utilities", "development-tools"]
build = "build.rs"

[[bin]]
name = "coffee-cli"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tier Terminal — PTY (portable-pty, WezTerm's cross-platform PTY library)
portable-pty = "0.9"
tokio = { version = "1", features = ["full"] }

# Regex (used by terminal.rs for ANSI strip)
regex = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Tauri
tauri = { version = "2", features = ["devtools", "protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"

# Utilities
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
anyhow = "1"

log = "0.4"
dirs = "5"
image = "0.25.10"
base64 = "0.22.1"
git2 = "0.19"
notify = "6.1.1"
# Coalesces bursts of fs events (e.g. CLI writing 50 files in a row) into a
# single handler callback so the frontend doesn't re-scan 50 times.
notify-debouncer-full = "0.3"
rusqlite = { version = "0.32", features = ["bundled"] }
keyring = "3"

# Multi-agent MCP server (v1.0: 3 tools, HTTP Streamable transport)
# See docs/MULTI-AGENT-ARCHITECTURE.md §5.5 for why HTTP over stdio.
# Note: schemars is NOT a direct dep — we use rmcp's re-exported schemars
# to avoid version conflicts (rmcp 0.8 uses schemars 1.x internally).
rmcp = { version = "0.8", features = ["server", "macros", "transport-streamable-http-server"] }
axum = "0.7"
uuid = { version = "1", features = ["v4"] }

[profile.release]
opt-level = "z"
lto = true
strip = true

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"

# Win32 bindings:
#   - DWM: force square window corners on Windows 11 (otherwise rounds
#     borderless windows by default).
#   - System_Console: AttachConsole for the `mcp-status` CLI subcommand
#     so its stdout reaches the parent terminal in release builds
#     (which link with windows_subsystem = "windows").
#   - System_Threading: process-liveness probe for the manifest reader.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_System_Console",
    "Win32_System_Threading",
] }

# `libc::kill(pid, 0)` for process-liveness probe in cli::mcp_status.
[target.'cfg(unix)'.dependencies]
libc = "0.2"
